# rusty_finance_tracker

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  diesel.toml  rusty_finance_tracker.db
backend/migrations/2025-01-08-144532_create_users/: up.sql
backend/migrations/2025-01-08-160412_create_categories/: up.sql
backend/migrations/2025-01-08-160450_create_product_tables/: up.sql
backend/migrations/2025-01-08-160450_create_tags/: up.sql
backend/migrations/2025-01-08-160540_create_product_tables/: down.sql  up.sql
backend/migrations/2025-01-08-160540_create_tags/: down.sql  up.sql
backend/src/: auth.rs  lib.rs  main.rs  models.rs  schema.rs  tree.md
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/domain/analytics/: handlers.rs  models.rs
backend/src/domain/categories/: handlers.rs  models.rs
backend/src/domain/product_prices/: handlers.rs  models.rs
backend/src/domain/products/: handlers.rs  models.rs
backend/src/domain/tags/: handlers.rs  models.rs
backend/src/domain/transactions/: handlers.rs  models.rs
backend/src/domain/users/: handlers.rs  models.rs
backend/src/routes/: analytics_routes.rs  category_routes.rs  product_price_routes.rs  product_routes.rs  tag_routes.rs  transaction_routes.rs  user_routes.rs
backend/src/tests/: workflow_test.rs
frontend/: Cargo.toml  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend.back/: Cargo.toml
frontend.back/src/: main.rs
frontend/src/: App.tsx  Layout.tsx  main.rs  main.tsx  (+1 more)
nginx/: nginx.conf
(+42 files in other folders)
